--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/fin_kontol.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/qualification/Pages/fin_kontol.html
@@ -211,46 +211,50 @@ font-size: 14pt;
 
 
 
-<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;">
-	<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
-	</h3>
-	<ul>
-		<li>
-			<a href="/fil/smolensk/dpo/qualification/Documents/%D0%91%D0%BB%D0%B0%D0%BD%D0%BA%20%D0%B7%D0%B0%D1%8F%D0%B2%D0%BA%D0%B8.doc">заявка</a> - для организаций;</li>
-		<li>
-			<a href="/fil/smolensk/dpo/qualification/Documents/%D0%B7%D0%B0%D1%8F%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5_%D0%9F%D0%9A.docx">заявление</a> - для слушателей;<br/>
-		</li>
-		<li>
-			<span>копию паспорта (1-ю страницу с фотографией);</span>
-		</li>
-		<li>
-			<span>копию диплома о высшем (среднем профессиональном)<br/> образовании с приложением;</span>
-		</li>
-		<li>
-			<span>документы, связанные с изменением фамилии (копию);</span>
-		</li>
-		<li>
-			<span>две фотографии размером 3х4 черно-белые матовые;</span>
 
-		</li>
-		<li>договоры:</li>
+
+<div align="center">
+	<div class="ms-rteElement-Callout4" id="myblank" style=" width: 570px;" >
+		<h3 style="text-indent: 45px;">Для записи на обучение необходимо представить:<br/>
+		</h3>
 		<ul>
 			<li>
-				<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80_%D0%9F%D0%9A_%D1%84%D0%B8%D0%B7_%D0%BB%D0%B8%D1%86%D0%BE.docx">Физическое лицо;</a>
+				<a href="/fil/smolensk/dpo/qualification/Documents/%D0%91%D0%BB%D0%B0%D0%BD%D0%BA%20%D0%B7%D0%B0%D1%8F%D0%B2%D0%BA%D0%B8.doc">заявка</a> - для организаций;</li>
+			<li>
+				<a href="/fil/smolensk/dpo/qualification/Documents/%D0%B7%D0%B0%D1%8F%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5_%D0%9F%D0%9A.docx">заявление</a> - для слушателей;<br/>
 			</li>
 			<li>
-				<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%9E%D0%93%D0%9E%D0%92%D0%9E%D0%A0%20%D0%9F%D0%9A%20%D1%8E%D1%80_1_%D0%BB%D0%B8%D1%86%D0%BE.docx">Юридическое лицо;</a>
+				<span>копию паспорта (1-ю страницу с фотографией);</span>
 			</li>
 			<li>
-				<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%9E%D0%93%D0%9E%D0%92%D0%9E%D0%A0_%D0%9F%D0%9A_%D1%8E%D1%80_%D0%BB%D0%B8%D1%86%D0%BE%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D1%81%D0%BA_%20%D1%81%D0%BB%D1%83%D1%88.docx">Юридическое лицо на несколько слушателей;</a>
-				<br/>
+				<span>копию диплома о высшем (среднем профессиональном)<br/> образовании с приложением;</span>
 			</li>
+			<li>
+				<span>документы, связанные с изменением фамилии (копию);</span>
+			</li>
+			<li>
+				<span>две фотографии размером 3х4 черно-белые матовые;</span>
+
+			</li>
+			<li>договоры:</li>
+			<ul>
+				<li>
+					<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80_%D0%9F%D0%9A_%D1%84%D0%B8%D0%B7_%D0%BB%D0%B8%D1%86%D0%BE.docx">Физическое лицо;</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%9E%D0%93%D0%9E%D0%92%D0%9E%D0%A0%20%D0%9F%D0%9A%20%D1%8E%D1%80_1_%D0%BB%D0%B8%D1%86%D0%BE.docx">Юридическое лицо;</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/qualification/Documents/%D0%94%D0%9E%D0%93%D0%9E%D0%92%D0%9E%D0%A0_%D0%9F%D0%9A_%D1%8E%D1%80_%D0%BB%D0%B8%D1%86%D0%BE%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D1%81%D0%BA_%20%D1%81%D0%BB%D1%83%D1%88.docx">Юридическое лицо на несколько слушателей;</a>
+					<br/>
+				</li>
+			</ul>
+			<li>
+				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>.</li>
 		</ul>
-		<li>
-			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>.</li>
-	</ul>
-	<div>
-		<br/>
+		<div>
+			<br/>
+		</div>
 	</div>
 </div>
 
